# django-snacks

./: Readme.md  db.sqlite3  pyproject.toml
snacks/: tests.py  urls.py  views.py
snacks/templates/: about.html  base.html  home.html
snacks_project/: asgi.py  settings.py  urls.py  wsgi.py
