[tool.poetry]
name = "django_snacks"
version = "0.1.0"
description = ""
authors = ["Anas AbuGhalieh <civil.Anas1000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
